--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
             <div class="highlight-content">
               <h3>Computer Vision</h3>
-              <p>Engineering real-time visual systems, demonstrated by a high-speed ASL recognition engine using MediaPipe and PyTorch.</p>
+              <p>Developed an ASL recognition engine using MediaPipe and PyTorch.</p>
             </div>
           </div>
           <div class="highlight-card">
