--- a/index.html
+++ b/index.html
@@ -191,9 +191,8 @@
 
         <div class="skills-section fade-in-up">
           <h2 class="skills-title">
-            <span class="keyword">const </span>skills <span class="operator">=</span> {
+            <span class="keyword"><span class="un-prefix">un</span>span>const </span>skills <span class="operator">=</span> {
           </h2>
-
           <div class="skills-container">
             <div class="skill-category">
               <h3 class="skill-label">languages:</h3>
