started blog post #1

--- a/index.html
+++ b/index.html
@@ -284,14 +284,9 @@
                 5 min read
               </span>
             </div>
-            <h2 class="blog-title">Getting Started with Autonomous Robotics</h2>
-            <p class="blog-excerpt">An introduction to the world of autonomous systems and my journey at the Waterloo Aerial Robotics Group.</p>
+            <h2 class="blog-title">My review on 1A ECE at uWaterloo!</h2>
+            <p class="blog-excerpt">Comments and tips about the scary first semester (1A).</p>
             <div class="blog-footer">
-              <div class="blog-tags">
-                <span class="tag">Robotics</span>
-                <span class="tag">Python</span>
-                <span class="tag">MAVLink</span>
-              </div>
               <span class="blog-link">
                 Read more
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
