added first blog post

--- a/index.html
+++ b/index.html
@@ -274,6 +274,34 @@
 
         <div class="blog-posts fade-in-up">
           <article class="blog-card">
+            <a href="blog-1a-review.html" style="text-decoration: none; color: inherit; display: block;">
+              <div class="blog-meta">
+                <span class="blog-date">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg>
+                  January 2026
+                </span>
+                <span class="blog-read-time">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
+                  12 min read
+                </span>
+              </div>
+              <h2 class="blog-title">My Review on 1A ECE at Waterloo!</h2>
+              <p class="blog-excerpt">Now that I'm almost a month into my 1B term, I want to give my honest opinion and feedback on how first semester went - courses, tips, and experiences.</p>
+              <div class="blog-footer">
+                <div class="blog-tags">
+                  <span class="tag">University</span>
+                  <span class="tag">ECE</span>
+                  <span class="tag">Waterloo</span>
+                </div>
+                <span class="blog-link">
+                  Read more
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
+                </span>
+              </div>
+            </a>
+          </article>
+
+          <article class="blog-card">
             <div class="blog-meta">
               <span class="blog-date">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg>
