added/edited blog post 1

--- a/blog-1a-review.html
+++ b/blog-1a-review.html
@@ -105,23 +105,23 @@
           <section class="content-section">
             <p>Now that I'm almost a month into my 1B term and finally soaked in all of 1A, I want to give my own opinion and feedback on how 1A/first semester went.</p>
 
-            <p>Starting with when I got accepted to Waterloo in March, I was so shocked when I read the email. I'm originally from Vancouver so I thought UBC would be my route – Waterloo was just a shot in the dark for me. My exact thought was, "Mind as well try." I remember reading reddit pages where people said you needed a 99% average to get in (not true) and thought I had no chance.</p>
+            <p>Starting with when I got accepted to Waterloo in March, I was shocked when I read the email. I'm originally from Vancouver so my whole life I believed UBC would be my route – Waterloo was essentially a shot in the dark for me. My exact thought was, "You miss 100% of the shots you don't take." I remember reading Reddit pages where people said you needed a 99% average to get in and realized how competitive Waterloo actually was.</p>
 
-            <p>When I got the acceptance from Waterloo, I had already paid the housing deposit for UBC since I never thought I would actually be going to East Canada for university. Fast forward to just before September, I fully processed that I was going to leave my family and friends. I became stressed out for university since I've heard how notoriously hard the ECE program was, and started doom scrolling Reddit, Discord, and Google on anything related to Waterloo. Paired with this, my grandpa was not doing well health-wise, so my mind was everywhere.</p>
+            <p>Fast forward to just before September, I fully processed that I was going to leave my family and friends. I became stressed out for university since I've heard how notoriously hard the ECE program was, and I began doom scrolling Reddit, Discord, and Google on anything related to Waterloo. Previous ECE student's complaining how hard the finals were, people telling us to use the summer as much as we can to relax since we won't have that free tiem when in university, and other posts made me petrified. Paired with this, my grandpa was not doing well health-wise, so my mind was everywhere.</p>
           </section>
 
           <section class="content-section">
             <h2>Arriving at Waterloo</h2>
-            <p>Having already toured Waterloo earlier in the year, getting to campus was not a huge surprise. Alternatively, I had even lower expectations for how the campus would be because when I did the campus tour, it was during finals week and the weather was the usual depressing weather we all see at campus. You can imagine how it felt being on campus at that time.</p>
+            <p>Having already toured Waterloo campus earlier in the year, seeing how the campus is again was not a surprise. Alternatively, I already had lower expectations on the campus because when I did the campus tour, it was during finals week so it felt like an abandoned area. Everyone was inside their dorms/apartments studying.</p>
 
-            <p>Orientation week was pretty fun, I was able to meet a lot of new people and the events planned by EngSoc were pretty well-made. The biggest letdown was that EdComm wasn't actually composed of the top performing engineers, but it was a unique concept for orientation. The best part was definitely the sunny weather for that week – I don't think I've seen the sun in a while.</p>
+            <p>Orientation week was pretty fun, I was able to meet a lot of new people and the events planned by EngSoc were very well-made. The biggest letdown was that EdComm (iykyk) wasn't actually composed of the top performing engineers, but it was a very unique concept for orientation that definitely made it a positive experience for me. The best part was definitely the sunny weather for that week – I don't think I've seen the sun in a while.</p>
           </section>
 
           <section class="content-section">
             <h2>Starting 1A</h2>
-            <p>Sadly, my grandpa passed away when starting the term, so I was not mentally ready to start. But, the beauty of going to Waterloo is that you learn to suck it up and keep going.</p>
+            <p>Sadly, my grandpa passed away when starting the term, so I was not mentally ready to start. But, the beauty of going to Waterloo is that you learn to push through and keep going.</p>
 
-            <p>To be honest, it was a lot more manageable than I expected. When I heard that we were taking seven courses, I thought it would be over. In grade 12, I had 2 classes per semester since I was able to gather up enough credits in the earlier years to get free blocks in senior year, so jumping from 2 courses per semester to 7 courses would have been the death of me. Realistically, there are only 4-5 courses (depending if you count English since it is very prof dependent) that you would actually need to put substantial work in.</p>
+            <p>To be honest, the semester was a lot more manageable than I expected. When I heard that we were taking seven courses, I thought I would be cooped up in my dorm studying without free time. In senior year of high school, I had 2-3 classes per semester as I was able to gather up enough credits in the earlier years to get free blocks in senior year, so jumping from 2 courses per semester to 7 courses would have been the death of me. Realistically, there are only 4-5 courses (depending if you count English since it is very prof dependent) that you would need to put substantial work in. As a result, I was able to get ~7-9 hours of sleep per night, meet many new people in and out of my program, and go to the gym daily.</p>
           </section>
 
           <!-- Course Reviews -->
@@ -133,9 +133,9 @@
                 <span class="course-code ece">ECE 150</span>
                 <span class="course-name">Fundamentals of Programming (C++)</span>
               </div>
-              <p>Taught by Professor Douglas Harder. First day he taught us, I already knew his class would be very interesting. He's very passionate and sometimes goes off topic but at least it's interesting. His website is very useful in studying as it contains his slides, problems, past exams, and numerous readings.</p>
-              <p>I already have experience learning C, so much of this course was review for me, but it was still valuable in attending lectures. Harder is who I think by far is one of the professor's who genuinely cares about us students and wants us to excel. Don't be afraid to ask him questions, he wants to help.</p>
-              <p class="tip"><strong>Tip:</strong> Spam past exams and genuinely understand what you're doing. Don't focus on memorization. Do the projects yourself and don't use AI. Something I found funny was that he included a hidden "AI finder" message in one of the project descriptions where if you copy pasted the project description into AI, it would format the code in a way that he knows it's AI. The goat.</p>
+              <p>Taught by Professor Douglas Harder. First day he taught us, I already knew his class would be very interesting. He's very passionate and sometimes goes off topic but even when he does, he still explains very interesting ideas. His website is very useful in studying as it contains his slides, problems, past exams, and numerous readings.</p>
+              <p>I already have experience learning C and object oriented programming, so much of this course was review for me, but it was still valuable in attending lectures to freshen up my knowledge. Harder is definitely one of the professor's in Waterloo who genuinely cares about us students and wants us to excel. Don't be afraid to ask him questions, he truly wants to help. He has very frequent office hours and he occasionally hosted optional lectures on his own time about programming to teach us more (not related to the course).</p>
+              <p class="tip"><strong>Tip:</strong> Spam past exams and genuinely understand what you're doing. Don't focus on memorization. Do the projects yourself and DON'T use AI. It is very easy to finish the projects with AI, but they include core concepts that will be tested on the midterm/final. Something I found funny was that he included a hidden "AI finder" message in one of the project descriptions where if you copy pasted the project description into AI, it would format the code in a way that he knows it's AI. The goat.</p>
             </div>
 
             <div class="course-review">
@@ -143,7 +143,7 @@
                 <span class="course-code math">MATH 117</span>
                 <span class="course-name">Calculus 1</span>
               </div>
-              <p>Derivatives and integrals taught by Professor Sachin Kotecha. Young professor but his notes are very organized and he's incredibly clear in his teaching. He reminds me of how a high school teacher would teach, which I enjoyed.</p>
+              <p>Derivatives and integrals taught by Professor Sachin Kotecha. Young professor but his notes are very organized and he's incredibly clear in his teaching. He reminds me of how a high school teacher would teach, which I enjoyed. No negatives about this course, all the professors teaching this from what I heard have been excellent and the material is a lot of highschool Calculus review (for BC, if you're from Ontario you wouldn't have done integrals yet). </p>
               <p class="tip"><strong>Tip:</strong> Take notes in class, do the problem sets before every tutorial, and spam past exams. His teaching would be a little fast if you did not take calculus in high school, so try your best to keep up.</p>
             </div>
 
