--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:description" content="Computer Engineering @ University of Waterloo">
 
   <link rel="canonical" href="https://daniel.uwce.ca">
-  <link rel="icon" href="favicon.jpg">
+  <link rel="icon" href="favicon.ico">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
