--- a/blog-1a-review.html
+++ b/blog-1a-review.html
@@ -105,7 +105,7 @@
           <section class="content-section">
             <p>Now that I'm almost a month into my 1B term and finally soaked in all of 1A, I want to give my own opinion and feedback on how 1A/first semester went.</p>
 
-            <p>Starting with when I got accepted to Waterloo in March, I was shocked when I read the email. I'm originally from Vancouver so my whole life I believed UBC would be my route – Waterloo was essentially a shot in the dark for me. My exact thought was, "You miss 100% of the shots you don't take." I remember reading Reddit pages where people said you needed a 99% average to get in and realized how competitive Waterloo actually was.</p>
+            <p>Starting with when I got accepted to Waterloo in March, I was shocked when I read the email. I'm originally from Vancouver so my whole life I believed UBC would be my route – Waterloo was essentially a shot in the dark for me. My exact thought was, "You miss 100% of the shots you don't take." I remember reading Reddit pages where people said you "needed" a 99% average to get in and realized how competitive Waterloo actually was.</p>
 
             <p>Fast forward to just before September, I fully processed that I was going to leave my family and friends. I became stressed out for university since I've heard how notoriously hard the ECE program was, and I began doom scrolling Reddit, Discord, and Google on anything related to Waterloo. Previous ECE student's complaining how hard the finals were, people telling us to use the summer as much as we can to relax since we won't have that free tiem when in university, and other posts made me petrified. Paired with this, my grandpa was not doing well health-wise, so my mind was everywhere.</p>
           </section>
