--- a/blog-1a-review.html
+++ b/blog-1a-review.html
@@ -112,7 +112,7 @@
 
           <section class="content-section">
             <h2>Arriving at Waterloo</h2>
-            <p>Having already toured Waterloo campus earlier in the year, seeing how the campus is again was not a surprise. Alternatively, I already had lower expectations on the campus because when I did the campus tour, it was during finals week so it felt like an abandoned area. Everyone was inside their dorms/apartments studying.</p>
+            <p>Having already toured Waterloo campus earlier in the year, seeing how the campus is again was not a surprise. Alternatively, I already had lower expectations on the campus because when I did the campus tour, it was during finals week so it felt like an abandoned area. Everyone was inside their dorms/apartments studying - you can imagine how it felt being there.</p>
 
             <p>Orientation week was pretty fun, I was able to meet a lot of new people and the events planned by EngSoc were very well-made. The biggest letdown was that EdComm (iykyk) wasn't actually composed of the top performing engineers, but it was a very unique concept for orientation that definitely made it a positive experience for me. The best part was definitely the sunny weather for that week – I don't think I've seen the sun in a while.</p>
           </section>
