--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
         <div class="blog-posts fade-in-up">
           <article class="blog-card">
-            <a href="blog-1a-review.html" style="text-decoration: none; color: inherit; display: block;">
+            <a href="blog/1a-review.html" style="text-decoration: none; color: inherit; display: block;">
               <div class="blog-meta">
                 <span class="blog-date">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg>
