--- a/index.html
+++ b/index.html
@@ -300,6 +300,34 @@
               </div>
             </a>
           </article>
+
+          <article class="blog-card">
+            <a href="blog/intro-to-ml.html" style="text-decoration: none; color: inherit; display: block;">
+              <div class="blog-meta">
+                <span class="blog-date">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg>
+                  January 2026
+                </span>
+                <span class="blog-read-time">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
+                  10 min read
+                </span>
+              </div>
+              <h2 class="blog-title">What are Neural Networks?</h2>
+              <p class="blog-excerpt">If you had told me a year ago that I'd be building systems that can "learn" from data, I wouldn't have believed you. Here's what I've learned about machine learning, broken down simply.</p>
+              <div class="blog-footer">
+                <div class="blog-tags">
+                  <span class="tag">Machine Learning</span>
+                  <span class="tag">Deep Learning</span>
+                  <span class="tag">Neural Networks</span>
+                </div>
+                <span class="blog-link">
+                  Read more
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
+                </span>
+              </div>
+            </a>
+          </article>
         </div>
 
         <div class="blog-coming-soon fade-in-up">
