--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <!-- CTA Section -->
       <div class="cta-section">
         <div class="container">
-          <p class="cta-text fade-in-up">If you think we could build something cool together or just want to chat, feel free to reach out!</p>
+          <p class="cta-text fade-in-up">If you want to just chat and know more about me, feel free to reach out!</p>
           <a href="mailto:d35kwan@uwaterloo.ca" class="cta-button fade-in-up">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
             Get in Touch
