updated descriptions and tech stack

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
             <div class="highlight-content">
               <h3>Computer Vision</h3>
-              <p>Developed an ASL recognition engine using MediaPipe and PyTorch.</p>
+              <p>Developed an ASL recognition engine using, OpenCV, ediaPipe and PyTorch.</p>
             </div>
           </div>
           <div class="highlight-card">
@@ -184,7 +184,7 @@
             </div>
             <div class="highlight-content">
               <h3>Cybersecurity</h3>
-              <p>Engineering secure systems in a connected world</p>
+              <p>Excited to make and reinforce secure systems in our increasingly connected digital world</p>
             </div>
           </div>
         </div>
@@ -201,9 +201,7 @@
                 <span class="badge">C++</span>
                 <span class="badge">C</span>
                 <span class="badge">SQL</span>
-                <span class="badge">Java</span>
                 <span class="badge">JavaScript</span>
-                <span class="badge">HTML/CSS</span>
               </div>
             </div>
 
@@ -216,6 +214,7 @@
                 <span class="badge">Pandas</span>
                 <span class="badge">OpenCV</span>
                 <span class="badge">Sci-kit learn</span>
+                <span class="badge">FastAPI</span>
               </div>
             </div>
 
@@ -225,7 +224,6 @@
                 <span class="badge">Git</span>
                 <span class="badge">GitHub</span>
                 <span class="badge">MAVLink</span>
-                <span class="badge">Bitbucket</span>
               </div>
             </div>
           </div>
