corrected minor typo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daniel Kwan | Computer Engineering @ UWaterloo</title>
+  <title>Daniel Kwan | Computer Engineering @ uWaterloo</title>
   <meta name="description" content="Daniel Kwan - Computer Engineering student at University of Waterloo. Passionate about machine learning, full-stack development, and cybersecurity.">
   <meta name="author" content="Daniel Kwan">
 
